crates/fig-parser/tests/snapshots/integration_tests__comments__comments_between_definitions.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: greet
        generic_params: []
        self_param: ~
        params: []
        return_types: []
      body:
        statements:
          - Pass
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name: Point
      generic_params: []
      requires: []
      fields:
        - name: x
          ty: I32
        - name: y
          ty: I32
  - Enum:
      visibility: Default
      annotations: []
      name: Color
      representation: ~
      generic_params: []
      requires: []
      variants:
        - name: RED
          value: ~
        - name: GREEN
          value: ~
        - name: BLUE
          value: ~
